# mlx_eda

./: README.md  fastapi_demo.py
week_1/: Word2Vec implementation.ipynb  gradio_script.py  pyproject.toml  run_week_1.ipynb  vocab.txt
week_2/: Multi-stage search code.ipynb  config.py  dataset.py  gradio_script.py  inference.py  loss.py  model.py  model_code.py  run_week_2.ipynb  server.py  tokenizer.py  train.py  two_tower_datasets.py
week_3/: GPT2 From Scratch.ipynb  fast_api_week_3.py  gradio_script.py  model.py  mymodel.model  mymodel.vocab  pyproject.toml  run_week_3.ipynb  test_inference_week_3.py  train.py  train_week_3.py
week_4/: Config.py  SP_data_encoder_decoder_testing.txt  SP_encoder_decoder_model.model  SP_encoder_decoder_model.vocab  Text-to-code dataset.ipynb  dataset.py
week_5/: Week 5 - Finetuning LLMs.ipynb
week_6/: loss.py  model.py  train.py  utils.py
week_7/: ddpm.py  ddpm_model.ipynb  modules.py  run_ddpm.ipynb  train.py  utils.py
